--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,15 @@
         android:theme="@style/Theme.LetsChat"
         tools:targetApi="31">
         <activity
-            android:name=".UserListActivity"
-            android:exported="false" />
+            android:name=".ChatActivity"
+            android:exported="false">
+        </activity>
+
+
         <activity
             android:name=".ProfileActivity"
-            android:exported="false" />
+            android:exported="false"
+             />
         <activity
             android:name=".OtpActivity"
             android:exported="false" />
@@ -38,7 +42,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="false"/>
     </application>
 
 </manifest>
