--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,30 +10,30 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/chat"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/chat"
         android:supportsRtl="true"
         android:theme="@style/Theme.LetsChat"
         tools:targetApi="31">
         <activity
-            android:name=".ChatActivity"
+            android:name=".Activity.ChatActivity"
             android:exported="false">
         </activity>
 
 
         <activity
-            android:name=".ProfileActivity"
+            android:name=".Activity.ProfileActivity"
             android:exported="false"
              />
         <activity
-            android:name=".OtpActivity"
+            android:name=".Activity.OtpActivity"
             android:exported="false" />
         <activity
-            android:name=".PhoneVerifyActivity"
+            android:name=".Activity.PhoneVerifyActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".Activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,10 +42,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="false"/>
 
-        <service android:name=".FCMNotificationService" android:exported="false">
+        <service android:name=".Activity.FCMNotificationService" android:exported="false">
             <intent-filter>
                 <action android:name="com.googl.firebase.MESSAGING_EVENT"/>
             </intent-filter>
